feat: locations drag n drop with ng2-dragula
